RESOLVED FIXED 257043
(REGRESSION 262148@main) No repaint when deleting text, possibly only when the deleted text spans more than one line
https://bugs.webkit.org/show_bug.cgi?id=257043
Summary (REGRESSION 262148@main) No repaint when deleting text, possibly only when th...
zalan
Reported 2023-05-19 11:43:07 PDT
Attachments
[fast-cq]Patch (4.40 KB, patch)
2023-05-19 12:09 PDT, zalan
no flags
zalan
Comment 1 2023-05-19 12:09:26 PDT
Created attachment 466424 [details] [fast-cq]Patch
EWS
Comment 2 2023-05-19 14:11:39 PDT
Committed 264274@main (8922f7c4d332): <https://commits.webkit.org/264274@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466424 [details].
Note You need to log in before you can comment on or make changes to this bug.